# starjumper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
Starjumper.xcodeproj/: project.pbxproj
Voyager.xcodeproj/: project.pbxproj
docs/: README.md
libs/alloc_or_die/: CMakeLists.txt
libs/checks/: CMakeLists.txt  LICENSE  README.md  checks.3  checks.c  checks.h  checks_tests.c
libs/checks/.builds/: debian_stable.yml  freebsd_latest.yml  openbsd_latest.yml
libs/checks/scripts/: coverage-report  rebuild
libs/dice/: CMakeLists.txt  LICENSE  README.md  dice.3  dice.c  dice.h  dice_tests.c
libs/dice/.builds/: alpine_latest.yml  debian_stable.yml  freebsd_latest.yml  openbsd_latest.yml
libs/lrnd/: CMakeLists.txt  LICENSE  README.md  TODO.md  lrnd.3  lrnd.c  lrnd.h  lrnd_ndebug_tests.c  lrnd_tests.c
libs/lrnd/.builds/: debian_stable.yml  freebsd_latest.yml  openbsd_latest.yml
libs/lrnd/scripts/: coverage-report  rebuild
libs/rnd/: CMakeLists.txt  rnd.c
libs/xmalloc/: README.md  xstdio.h
libstarjumper/: CMakeLists.txt  alloc_or_die.c
libstarjumper/starjumper/: sj_defs.h  sj_dice_throw.c  sj_dice_throw.h  sj_die_modifier.c  sj_die_modifier.h  sj_die_modifier_array.c  sj_die_modifier_array.h  sj_hex_coordinate.c  sj_hex_coordinate.h  sj_memory.c  sj_memory.h  sj_random.c  sj_random.h  sj_strarray.c  sj_strarray.h  sj_string.c  sj_string.h  sj_string_array.c  sj_subsector.c  sj_subsector.h  sj_trade_classification.c  sj_trade_classification.h  sj_world.c  sj_world.h  starjumper.c  starjumper.h  starjumper_tests.c  vgr_defs.h  vgr_dice_throw.h  vgr_die_modifier.h  vgr_hex_coordinate.h  vgr_memory.h  vgr_strarray.c  vgr_strarray.h  vgr_string.c  vgr_string.h  vgr_trade_classification.h  vgr_world.h
libstarjumper/voyager/: vgr_dice_throw.h  vgr_hex_coordinate.h  vgr_memory.h  vgr_strarray.h  vgr_trade_classification.h  vgr_world.c  voyager.c
libstarjumper/worldgen/: main.c
scripts/: coverage-report  rebuild
src/starjumper/: CMakeLists.txt  dice_throw.c  dice_throw.h  dice_throw_tests.c  hex_coordinate.c  hex_coordinate.h  hex_coordinate_tests.c  sj_dice_throw.c  sj_dice_throw.h  sj_hex_coordinate.c  sj_hex_coordinate.h  sj_string.c  sj_string_array.c  sj_string_array.h  sj_string_join.c  sj_subsector.c  sj_subsector.h  sj_trade_classification.c  sj_trade_classification.h  sj_world.c  starjumper.h  string_array.c  string_array.h  string_join.c  string_join.h  subsector.c  subsector.h  trade_classification.c  trade_classification.h  world.c  world.h  world_tests.c
src/voyager/: vgr_defs.h  vgr_dice_throw.c  vgr_die_modifier.c  vgr_die_modifier.h  vgr_hex_coordinate.c  vgr_hex_coordinate.h  vgr_memory.c  vgr_memory.h  vgr_string.h  vgr_trade_classification.c  vgr_trade_classification.h  vgr_world.c  vgr_world.h  voyager.c  voyager.h
src/worldgen/: CMakeLists.txt  main.c  options.c  options.h  worldgen.6
worldgen/: CMakeLists.txt  main.c  options.c  options.h  worldgen.6
